[package]
name = "dla"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = { version = "0.17.0", features = ["specs-derive"] }
nalgebra = "0.29.0"
ggez = "0.7.0"
glam = "0.20.2"
rand = "0.8.4"
rayon = "1.5.1"